--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm,cjs",
     "prepublishOnly": "npm run build",
